# auto-news-test

./: .eslintrc.js  README.md  gatsby-config.js  gatsby-node.js  netlify.toml  package-lock.json  package.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: add_feature.md  bug_report.md  create_page.md  development.md
.github/workflows/: auto-news-update.yml  deploy-to-cloudflare-of-cms-preview.yml  deploy-to-cloudflare.yml  deploy-to-netlify.yml  development-preview-sync.yml  get-ranking-csv.yml  markdown_to_json.yml  master-deploy-sync.yml
.github/workflows/to_edit_system/: convert_markdown_to_json.py
functions/: _middleware.js
src/auto-news/scripts/: auto-news-update.py
src/cms/: cms.js  department.json  department_en.json
src/cms/preview-templates/: CourseEnPostPreview.js  CoursePostPreview.js  DepartmentEnPreview.js  (+3 more)
src/common/: BreadCrumbBar.js  IframeMovie.js  Sidebar.js  SiteMetadata.js
src/pages/: 404.js  index.js
src/ranking/get-ranking/python-script/: .env.sample  README.md  pyproject.toml
src/ranking/get-ranking/python-script/src/: main.py
src/templates/: about-page-en.js  about-page.js  courses-en-preview.js  courses-en.js  courses-preview.js  courses.js  department-en-preview.js  department-en.js  department-preview.js  department.js  faq-page.js  farewell-preview.js  farewell.js  forteacher-page.js  links-page.js  news-en.js  news-preview.js  news.js  relay-page-top.js  relay-page.js  research-interview.js  specials.js  tags-en.js  tags.js  words.js
static/: elasticsearch_index_mapping.json
static/admin/: config.yml
(+1241 files in other folders)
